--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./img/mark.jpg" alt="mark" width="264" height="260">
+                    <img src="./images/mark.jpg" alt="mark" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="./img/tom.jpg" alt="tom" width="264" height="260">
+                    <img src="./images/tom.jpg" alt="tom" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="./img/camila.jpg" alt="camila" width="264" height="260">
+                    <img src="./images/camila.jpg" alt="camila" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./img/daniel.jpg" alt="daniel" width="264" height="260">
+                    <img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
