my first project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="#">WebStudio</a></li>
+                <li><a href="#">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
@@ -31,6 +31,7 @@
         </section>
 
         <section>
+            <h2>Our Advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
